# VA416xx_EVK

./: .gitignore  CAN_BOOTLOADER_SUMMARY.md
docs/: afe_regs.py
software/: IOCONFIGhelper.xlsm
software/Flash_loader_IAR/: install_readme.txt
software/Flash_loader_IAR/Vorago/: FlashVA416X0_EBI_FRAM.board  FlashVA416X0_SPI_FRAM.flash
software/Flash_loader_IAR/project/FlashVA416X0_EBI_FRAM/: FlashVA416X0.s  FlashVA416X0_EBI_FRAM.c  FlashVA416X0_EBI_FRAM.dep  FlashVA416X0_EBI_FRAM.ewd  FlashVA416X0_EBI_FRAM.ewp  FlashVA416X0_EBI_FRAM.ewt  FlashVA416X0_EBI_FRAM.eww  FlashVA416X0_EBI_FRAM.flash  FlashVA416X0_reset.mac  flash_config.h  readme.txt
software/Flash_loader_IAR/project/FlashVA416X0_SPI_FRAM/: FlashVA416X0.icf  FlashVA416X0_SPI_FRAM.board  FlashVA416X0_SPI_FRAM.c  FlashVA416X0_SPI_FRAM.dep  FlashVA416X0_SPI_FRAM.ewd  FlashVA416X0_SPI_FRAM.ewp  FlashVA416X0_SPI_FRAM.ewt  FlashVA416X0_SPI_FRAM.eww  readme.txt  va416xx.h
software/Flash_loader_Keil/: VA416_EBIBOOT_FRAM_256KB.FLM  VA416_EBI_FRAM_512KB.FLM  VA416_SPI_FRAM_256KB.FLM
software/projects/: .cproject  .project  CMakeLists.txt  Makefile  bitdefs.h  flash.jlink  install_linux.txt  release_notes.txt  va416xx.ld  va416xx_bl.ld  va416xx_fram.ld
software/projects/IAR/blinky/: project.dep  project.ewp  project.ewt  project.icf
software/projects/IAR/blinky/settings/: project.Debug.cspy.bat  project.Debug.cspy.ps1  project.Debug.general.xcl  project.dnx  project.wsdt
software/projects/IAR/bootloader/: project.dep  project.ewd  project.ewp  project.ewt  project.icf
software/projects/IAR/bootloader/settings/: project.Debug.cspy.bat  project.Debug.cspy.ps1  project.Debug.driver.xcl  project.Debug.general.xcl  project.Release.cspy.bat  project.Release.cspy.ps1  project.Release.driver.xcl  project.Release.general.xcl  project.dnx  project.wsdt
software/projects/IAR/demo/: VA416xx_EVK.dep  VA416xx_EVK.ewd  VA416xx_EVK.ewp  VA416xx_EVK.ewt  VA416xx_EVK.eww
software/projects/IAR/demo/settings/: VA416xx_EVK.Debug.cspy.bat  VA416xx_EVK.Debug.cspy.ps1  VA416xx_EVK.Debug.driver.xcl  VA416xx_EVK.Debug.general.xcl  VA416xx_EVK.dbgdt  VA416xx_EVK.dnx  VA416xx_EVK.wsdt
software/projects/IAR/freertos_blinky/: project.dep  project.ewd  project.ewp  project.ewt
software/projects/IAR/freertos_blinky/settings/: project.Debug.cspy.bat  project.Debug.cspy.ps1  project.Debug.driver.xcl  project.Debug.general.xcl  project.dnx  project.wsdt  project_EditorBookmarks.xml
software/projects/apps/blinky/hdr/: board.h  uart.h
software/projects/apps/blinky/src/: CMakeLists.txt  hardFault_handler.c
software/projects/apps/bootloader/hdr/: board.h  memtest.h  stdio_remap.h  xmodem.h
software/projects/apps/bootloader/src/: CMakeLists.txt  board.c  bootloader.c  main.c  memtest.c  stdio_remap.c  vectrst_IAR.s  vectrst_Keil.s  xmodem.c
software/projects/apps/can_bootloader/: README.md
software/projects/apps/can_bootloader/hdr/: board.h  bootloader.h  can.h  can_protocol.h  crc.h  hal_config.h  main.h
software/projects/apps/can_bootloader/src/: CMakeLists.txt  bootloader.c  can.c  can_protocol.c  crc.c  hardFault_handler.c  main.c  uart.c  vectrst_gcc.s
software/projects/apps/demo/hdr/: board.h  can_test.h  cmd_interface.h  hal_config.h  phy_test.h  phytest_cfg.h
software/projects/apps/demo/src/: CMakeLists.txt  board.c  can_test.c  cmd_interface.c  hardFault_handler_asm_keil.s  main.c  phy_test.c  startup_IAR_va416xx.s
software/projects/apps/eraser/: CMakeLists.txt  eraser.c  eraser.h
software/projects/apps/freertos_blinky/hdr/: board.h  hal_config.h
software/projects/apps/freertos_blinky/src/: CMakeLists.txt  board.c  freertos.c  main.c  startup_Keil_va416xx.s  startup_va416xx.s
software/projects/apps/ft_vor/: CAN_MESSAGE_TABLE.md
software/projects/apps/ft_vor/hdr/: ads1278.h  afe11612.h  afe11612_regs.h  board.h  can.h  hal_config.h  hal_utils.h  peripherals.h  signal_table.h  sine_table.h
software/projects/apps/ft_vor/src/: CMakeLists.txt  ads1278.c  afe1112.c  afe11612.c  board.c  can.c  main.c  peripherals.c  signal_table.c  sine_table.c  uart.c
software/projects/apps/loader/: CMakeLists.txt  loader.c  loader.h
software/projects/common/BSP/evk/hdr/: i2c_adxl343.h  peb1_va416xx_evk.h  peb2_va41628_evk.h
software/projects/common/BSP/evk/src/: i2c_adxl343.c  peb1_va416xx_evk.c
software/projects/common/drivers/hdr/: va416xx_debug.h  va416xx_hal.h  va416xx_hal_adc.h  va416xx_hal_adc_swcal.h  va416xx_hal_canbus.h  va416xx_hal_clkgen.h  va416xx_hal_dma.h  va416xx_hal_spi.h  va416xx_hal_spw.h  va416xx_hal_uart.h
software/projects/common/drivers/src/: va416xx_debug.c  va416xx_hal.c  va416xx_hal_adc.c  va416xx_hal_adc_swcal.c  va416xx_hal_canbus.c  va416xx_hal_clkgen.c  va416xx_hal_dma.c  va416xx_hal_i2c.c  va416xx_hal_spi.c  va416xx_hal_spw.c  va416xx_hal_uart.c
software/projects/common/mcu/hdr/: va416xx.h
software/projects/common/utils/hdr/: dac_sine.h  segger_rtt_conf.h
software/projects/common/utils/src/: CMakeLists.txt  dac_sine.c  segger_rtt.c  segger_rtt_printf.c  spi_fram.c
software/projects/freeRTOS/Source/: CMakeLists.txt
software/projects/freeRTOS/Source/config/: FreeRTOSConfig.h
software/projects/freeRTOS/Source/portable/GCC/ARM_CM4F/: port.c
software/projects/freeRTOS/Source/portable/IAR/ARM_CM4F/: port.c  portasm.s  portmacro.h
software/projects/keil/blinky/: JLinkLog.txt  JLinkSettings.jlinkscript  blinky.uvguix.TimAlexander  blinky.uvoptx  blinky.uvprojx
software/projects/keil/bootloader/: JLinkLog.txt  bootloader.uvguix.TimAlexander  bootloader.uvoptx  bootloader.uvprojx  lre.ini
software/projects/keil/demo/: JLinkLog.txt  demo.uvguix.TimAlexander  demo.uvoptx  demo.uvprojx  lre.ini
software/projects/keil/freertos_blinky/: JLinkLog.txt  freertos_blinky.uvguix.TimAlexander  freertos_blinky.uvoptx  freertos_blinky.uvprojx
software/projects/scripts/: gen_build_info.sh  sram_unlock.jlinkscript  va416xx.cfg  va416xx.svd
software/projects/tests/: tests_include.h
software/projects/tests/SPI/: CMakeLists.txt  test_hal_spi.c  test_hal_spi.h
(+42 files in other folders)
